<resources>
    <string name="app_name">AllNews</string>
    <string name="api_key">1a298eeeea1a4d95a787c61db162c244</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="all_news">AllNews</string>
    <string name="top_news">Top News</string>
    <string name="recent_news">Recent News</string>
    <string name="title_category">Category</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="judul">Judul Berita</string>
    <string name="sumber">CNN</string>
    <string name="waktu">0000-00-00</string>
    <string name="penulis">Faisal Obara</string>
    <string name="deskripsi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="url">https://www.google.com</string>
    <string name="readmore">Read More:</string>

    <string-array name="option_language">
        <item><b>Region</b></item>
        <item>United States</item>
        <item>United Kingdom</item>
        <item>Indonesia</item>
        <item>Brazil</item>
        <item>Japan</item>
        <item>South Korea</item>
        <item>Russia</item>
        <item>Taiwan</item>
    </string-array>
</resources>