<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/top_news"
        android:textColor="@color/new_black"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <Spinner
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/category"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:entries="@array/option_language"
        android:minHeight="48dp" />

    <HorizontalScrollView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home"
        android:layout_margin="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn1"
                android:text="@string/general"
                android:textSize="13sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn2"
                android:text="@string/business"
                android:textSize="13sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn3"
                android:text="@string/entertainment"
                android:textSize="13sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn4"
                android:text="@string/health"
                android:textSize="13sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn5"
                android:text="@string/science"
                android:textSize="13sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn6"
                android:text="@string/sports"
                android:textSize="13sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn7"
                android:text="@string/technology"
                android:textSize="13sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/category"
        android:layout_marginTop="10dp" />

</RelativeLayout>